# rotamer

./: BENCHMARKS.md  Cargo.toml  LICENSE  README.md  build.rs
benches/: sidechain.rs
src/: lib.rs  math.rs  nerf.rs  residue.rs  sealed.rs
tests/: bond.rs  chirality.rs  constants.rs  geometry.rs  ring.rs  smoke.rs
tests/common/: mod.rs
