[package]
name = "rotamer"
version = "0.2.0"
authors = ["Tony Kan <tianchengkan@gmail.com>"]
license = "MIT"
repository = "https://github.com/TKanX/rotamer"
edition = "2024"
description = "A Rust library for NERF-based sidechain coordinate placement for 29 amino acid types; build.rs bakes all bond geometry as f32 literals, custom libm-free sincosf/rsqrtf, #[repr(C)] stack-only output, zero heap, no-std."
keywords = ["biology", "bioinformatics", "chemistry", "protein", "no-std"]
categories = ["science::computational-biology::structural-modeling", "no-std"]
readme = "README.md"

[build-dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", default-features = false, features = [
    "full",
    "parsing",
] }
prettyplease = "0.2.37"

[dev-dependencies]
approx = "0.5.1"
criterion = "0.5.1"
dunbrack = "0.1.0"
paste = "1.0.15"

[lib]
name = "rotamer"
path = "src/lib.rs"

[[bench]]
name = "sidechain"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
